syntax = "proto3";

option csharp_namespace = "GrpcServerStreaming";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc CallStream (StreamRequest) returns (stream StreamContent);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message StreamRequest{
  string request = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message StreamContent{
  int32 id = 1;
  string name = 2;
  string contact = 3;
}
